--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <body>
     <h1>Rock Paper Scissors</h1>
-    <button id="restart" class="restart-btn">Restart Game</button>
+    <!-- <button id="restart" class="restart-btn">Restart Game</button> -->
     <div id="score" class="score">
       <p>Player: 0</p>
       <p>Computer: 0</p>
@@ -31,12 +31,12 @@
       <div class="display-choices">
         <div class="show-choice">
           <!-- <p>User Choice</p> -->
-          <p></p>
-          <img id="user-choice" src=""/>
+          <h3 id="user-header"></h3>
+          <img class="img" id="user-choice" src=""/>
         </div>
         <div class="show-choice">
-          <p></p>
-          <img id="comp-choice" src=""/>
+          <h3 id="comp-header"></h3>
+          <img class="img" id="comp-choice" src=""/>
         </div>
       </div>
       
