--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
 
   <body>
-    <h1>Rock Paper Scissors</h1>
+    <h1 class="main-header">Rock Paper Scissors</h1>
     <!-- <button id="restart" class="restart-btn">Restart Game</button> -->
     <div id="score" class="score">
       <p>Player: 0</p>
